
[metadata]
name = rqlite
version = 1.0.0
author = Timothy Moore
author_email = mtimothy984@gmail.com
url = https://github.com/tjstretchalot/rqlite
description = An unofficial python client for RQLite
long_description = file: README.md
long_description_content_type = text/markdown
requires_dist = setuptools
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
[options]
packages =
    rqlite
package_dir =
    rqlite = src/rqlite
install_requires =
    requests
    aiohttp
