
[metadata]
name = rqdb
version = 1.4.1
author = Timothy Moore
author_email = mtimothy984@gmail.com
url = https://github.com/tjstretchalot/rqdb
description = An unofficial python client for RQLite
long_description = file: README.md
long_description_content_type = text/markdown
requires_dist = setuptools
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
[options]
packages =
    rqdb
package_dir =
    rqdb = src/rqdb
install_requires =
    requests
    aiohttp
